店舗更新エンドポイントを追加する
